2009-10-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.

        Tightened up some put_by_id_transition code generation.
        https://bugs.webkit.org/show_bug.cgi?id=30539

        * jit/JIT.h:
        * jit/JITPropertyAccess.cpp:
        (JSC::JIT::testPrototype):
        (JSC::JIT::privateCompilePutByIdTransition): No need to do object type
        checks or read Structures and prototypes from objects: they're all known
        constants at compile time.

2009-10-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.

        Added a private API for getting a global context from a context, for
        clients who want to preserve a context for a later callback.

        * API/APICast.h:
        (toGlobalRef): Added an ASSERT, since this function is used more often
        than before.

        * API/JSContextRef.cpp:
        * API/JSContextRefPrivate.h: Added. The new API.

        * API/tests/testapi.c:
        (print_callAsFunction):
        (main): Test the new API.

        * JavaScriptCore.exp:
        * JavaScriptCore.xcodeproj/project.pbxproj: Build and export the new API.

2009-10-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        Tightened up some instanceof code generation.
        https://bugs.webkit.org/show_bug.cgi?id=30488

        * jit/JITOpcodes.cpp:
        (JSC::JIT::emit_op_instanceof):
        (JSC::JIT::emitSlow_op_instanceof): No need to do object type checks - 
        cell type checks and ImplementsDefaultHasIntance checks implicitly
        supersede object type checks.

2009-10-18  Kwang Yul Seo  <skyul@company100.net>

        Reviewed by Darin Adler.

        Use _stricmp and _strnicmp instead of deprecated stricmp and strnicmp.
        https://bugs.webkit.org/show_bug.cgi?id=30474

        stricmp and strnicmp are deprecated beginning in Visual
        C++ 2005. Use _stricmp and _strnicmp instead in StringExtras.h.

        * wtf/StringExtras.h: